style fix bug align text on homepage

--- a/assets/styles/_main.scss
+++ b/assets/styles/_main.scss
@@ -37,7 +37,8 @@ div .sign {
       flex-wrap: wrap;
 
       img {
-        width: 100%;
+        width: 60%;
+        margin-left: 40%;
       }
 
       h1 {
@@ -375,10 +376,14 @@ div .sign {
 
   p {
     color: $text-nav;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   img {
     width: 150px;
+    height: 120px;
   }
 .how {
   height: auto;
